--- a/ffq-questionnaire-web/src/app/pages/home-page/home-page.component.html
+++ b/ffq-questionnaire-web/src/app/pages/home-page/home-page.component.html
@@ -1,9 +1,114 @@
 <app-parental-header></app-parental-header>
 <div class="home-component-container">
-    <div class="home-container">
-        <div class="homeitem-container">
-            <h1>Title</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+  <div class="home-container">
+    <div class="homeitem-container">
+      <div class="homeitem-content">
+        <div class="homeitem-title">
+          <h1>Parental Portal</h1>
+          <h2>"Welcome to Parent Portal"</h2>
+          <p>
+            Each tab has a different tool, please see the descriptions below
+          </p>
         </div>
+
+        <div class="homeitem-svg">
+          <img
+            class="header-logo"
+            src="assets/images/logo.png"
+            alt=""
+            height="80"
+            width="80"
+            routerLink="/parent/home"
+          />
+        </div>
+      </div>
     </div>
+
+    <div class="homeitem-2-container">
+      <div class="homeitem-container">
+        <h1>Questionnaire</h1>
+
+        <div class="homeitem-content">
+          <p>
+            Complete this questionnaire to learn if you are feeding your child
+            the recommended amounts for each food group
+          </p>
+          <div class="homeitem-svg"><img
+            class="center"
+            src="assets/images/Questionnaire_Icon.png"
+            height="40"
+            width="40"
+          /></div>
+        </div>
+      </div>
+
+      <div class="homeitem-container">
+        <h1>Recommendations</h1>
+        <div class="homeitem-content">
+          <p>
+            Click here to learn what are the recommended amounts of each food
+            group that you should feed your baby every day
+          </p>
+          <div class="homeitem-svg"><img
+            class="center"
+            src="assets/images/Recommendations_Icon.png"
+            height="40"
+            width="40"
+          /></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="homeitem-2-container">
+      <div class="homeitem-container">
+        <h1>Tracking</h1>
+        <div class="homeitem-content">
+          <p>
+            Complete this short form every week to monitor if you are feeding
+            your child the recommended amounts for each food group
+          </p>
+          <div class="homeitem-svg">
+            <img
+              class="center"
+              src="assets/images/Tracking_Icon.png"
+              height="40"
+              width="40"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="homeitem-container">
+        <h1>Growth Chart</h1>
+        <div class="homeitem-content">
+          <p>
+            Click here to input the weight and length of your child from the
+            last visit to the pediatric office to monitor his/her growth
+          </p>
+          <div class="homeitem-svg"><img
+            class="center"
+            src="assets/images/Chart_Growth_Icon.png"
+            height="40"
+            width="40"
+          /></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="homeitem-container">
+      <h1>Other</h1>
+      <div class="homeitem-content">
+        <p>
+          Click here to access other resources (videos and websites) with
+          information related to feeding your child
+        </p>
+        <div class="homeitem-svg"><img
+            class="center"
+            src="assets/images/Other_Resources.png"
+            height="40"
+            width="40"
+          /></div>
+      </div>
+    </div>
+  </div>
 </div>
