--- a/ffq-questionnaire-web/src/app/pages/home-page/home-page.component.css
+++ b/ffq-questionnaire-web/src/app/pages/home-page/home-page.component.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
 
-    background-color: #0039e6;
+    background-color: #0039E6;
 
     margin: .3em;
     padding: .5em;
