--- a/ffq-questionnaire-web/src/app/pages/parental-header/parental-header.component.css
+++ b/ffq-questionnaire-web/src/app/pages/parental-header/parental-header.component.css
@@ -51,7 +51,7 @@ body, html {
   }
 
   .header{
-    background-color: #0039e6;
+    background-color: #0039E6;
     width: 100%;
     height: auto;
     position: fixed;
