--- a/ffq-questionnaire-web/src/app/components/question-block/question-block.component.css
+++ b/ffq-questionnaire-web/src/app/components/question-block/question-block.component.css
@@ -75,7 +75,7 @@
   text-align: center;
   display: table;
   position: relative;
-  background-color: gray;
+  background-color: rgba(128, 128, 128, 0);
   border: 2px solid black;
   border-radius: 4em;
   transition: background-color 0.2s ease-in-out;
@@ -86,8 +86,8 @@
   text-align: center;
   display: table;
   position: relative;
-  background-color: gray;
-  border: 2px solid black;
+  background-color: rgba(128, 128, 128,0);
+  border: 2px solid rgb(0, 0, 0);
   border-radius: 4em;
   transition: background-color 0.2s ease-in-out;
   padding: 5px;
@@ -119,17 +119,15 @@
 }
 
 .photo img {
-  width: 170px;
-  height: 135px;
-  filter: grayscale(100%) contrast(120%);
-  box-shadow: 10px 15px 25px 25px rgba(0, 0, 0, 0.2);
+  width: 180px;
+  height: 165px;
   display: block;
   transition: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
   margin-top: -10px;
 }
 
 .photo:hover img {
-  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 1px 10px 10px rgba(24, 119, 242, 0.1);
 }
 
 .photo .glow-wrap {
@@ -146,7 +144,7 @@
   position: absolute;
   width: 40%;
   height: 200%;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(24, 119, 242, 0.2);
   top: 0;
   filter: blur(5px);
   transform: rotate(45deg) translate(-450%, 0);
@@ -161,7 +159,7 @@
 .photo:hover img,
 .photo:hover .glow-wrap {
   margin-top: 0;
-  border: 3px outset black;
+  border: 3px outset rgb(24, 119, 242);
 }
 
 .wrapper {
